<resources>
    <!-- A -->
    <string name="app_name">GensysPDV</string>
    <string name="activity_label_venda">Venda</string>
    <string name="activity_label_detalhe">Detalhe</string>
    <string name="activity_label_cliente">Cliente</string>
    <string name="activity_label_Estoque">Estoque</string>
    <string name="activity_label_vendas">Vendas</string>
    <string name="activity_label_configuracoes">Configurações</string>
    <string name="activity_label_configuracoes_desktop">Configurações Desktop</string>
    <string name="activity_label_configuracoes_cloud">Configurações Nuvem</string>
    <string name="about_dialog_text"><![CDATA[
<b>Aplicativo Venda Poynt 2017</b><br><br>
<b>Versão:</b><br> %1$s<br><br>
<b>Número de Serie:</b><br> %2$s<br><br>
<b>E-mail do Suporte:</b><br>suporte@geniusnt.com<br><br>
<b>Site:</b><br><a href="http://www.geniusbrasil.com.br">http://geniusbrasil.com.br</a><br><br>
<b>Política de Privacidade:</b><br><a href="http://geniusbrasil.com.br/politica-de-privacidade-genius-poynt/">http://geniusbrasil.com.br/politica-de-privacidade-genius-poynt/</a><br><br>
<b>Fone:</b><br>(71)3503-1999
	]]></string>
    <string name="about_dialog_title">Sobre</string>
    <!-- B -->
    <string name="btn_yes">Sim</string>
    <string name="btn_no">Não</string>
    <string name="btn_confirmar">CONFIRMAR</string>
    <!-- C -->
    <string name="category_host_key">servidor</string>
    <string name="category_print_key">impressao</string>
    <string name="category_host">Configurações do Servidor</string>
    <string name="category_print">Configurações de Impressão</string>
    <string name="config_desktop">DESKTOP</string>
    <string name="config_cloud">CLOUD</string>
    <!-- D -->
    <string name="description_produt">Sem produtos</string>
    <string name="dialog_button_confirm">CONFIRMAR</string>
    <string name="dialog_button_cancel">CANCELAR</string>
    <string name="description_forma_pagamento_tela">Sair da tela de formas de pagamento</string>
    <!-- H -->
    <string name="hint_usuario">Usuário</string>
    <string name="hint_senha">Senha</string>
    <!-- L -->
    <string name="lb_hint_observation">Observação</string>
    <string name="lb_tipo_desconto">Tipo do desconto</string>
    <string name="lb_valor">VALOR</string>
    <string name="lb_valor_bruto">Valor bruto</string>
    <string name="lb_desconto">Desconto</string>
    <string name="lb_valor_liquido">Valor líquido</string>
    <string name="lb_valor_troco">Valor troco</string>
    <string name="lb_itens_venda">Itens da venda</string>
    <string name="lb_itens_pagamento">Pagamento</string>
    <string name="lb_desc">%</string>
    <string name="lb_tipo_desc">R$</string>
    <!-- M -->
    <string name="menu_sync">Sincronizar</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_info">Informações</string>
    <string name="menu_exit">Sair</string>
    <string name="menu_home">Home</string>
    <string name="msg_alerta_permissao">Para utilizar este aplicativo, você precisa aceitar as permissões.</string>
    <string name="msg_error_conexao_indisponivel">Conexão indisponível. Verifique seu Wi-Fi ou 3G.</string>
    <string name="msg_error_usuario">Informe o usuário!</string>
    <string name="msg_error_senha">Informe a senha!</string>
    <string name="msg_add_pagamentos">Nenhum pagamento adicionado</string>
    <!-- N -->
    <string name="nav_item_vendas">Vendas</string>
    <string name="nav_item_sair">Sair</string>
    <string name="nav_item_finalizar">Finalizar Venda</string>
    <string name="nav_item_total">Valor total</string>
    <string name="nav_drawer_reverse">Estornar</string>
    <string name="nav_drawer_reprint">Reimprimir</string>
    <string name="nav_drawer_report">Relatório</string>
    <string name="nav_drawer_username">Tiago Vieira Silva</string>
    <string name="nav_drawer_email">tiago.pereira.vieira@gmail.com</string>
    <!-- O -->
    <string name="ok">OK</string>
    <!-- P -->
    <string name="pref_host_key">host</string>
    <string name="pref_default_host_title">Host</string>
    <string name="pref_default_host_message">Informe o Ip do Servidor</string>
    <string name="pref_default_host_summary">Informe o Ip do Servidor</string>
    <string name="pref_company_key">company</string>
    <string name="pref_default_company_title">Empresa</string>
    <string name="pref_default_company_message">Informe a Empresa</string>
    <string name="pref_default_company_summary">Informe a Empresa</string>
    <string name="pref_user_key">user</string>
    <string name="pref_default_user_title">Usuário</string>
    <string name="pref_default_user_message">Informe o Usuário</string>
    <string name="pref_default_user_summary">Informe o Usuário da Base de Dados</string>
    <string name="pref_pass_key">pass</string>
    <string name="pref_default_pass_title">Senha</string>
    <string name="pref_default_pass_message">Informe a Senha da Base de Dados</string>
    <string name="pref_default_pass_summary">"Informe a Senha (Opcional)"</string>
    <string name="pref_db_key">db</string>
    <string name="pref_default_db_title">Base de Dados</string>
    <string name="pref_default_db_message">Informe a Base de Dados</string>
    <string name="pref_default_db_summary">"Informe a Base de Dados"</string>
    <string name="pref_print_nfce_key">nfce</string>
    <string name="pref_print_nfce_resume_key">nfce_resume</string>
    <string name="pref_print_note_key">cupom</string>
    <string name="pref_print_nfce">Imprimir NFC-e</string>
    <string name="pref_print_nfce_resume">Imprimir NFC-e resumido</string>
    <string name="pref_print_note">Imprimir Cupom</string>
    <!-- PREF CLOUD -->
    <string name="pref_email_key">email</string>
    <string name="pref_default_email_title">E-mail</string>
    <string name="pref_default_email_message">Informe o E-mail de Usuário</string>
    <string name="pref_default_email_summary">Informe o E-mail de Usuário</string>
    <string name="pref_company_cloud_key">company_cloud</string>
    <string name="pref_default_company_cloud_title">Empresa</string>
    <string name="pref_default_company_cloud_message">Informe a Empresa</string>
    <string name="pref_default_company_cloud_summary">Informe a Empresa</string>
    <string name="pref_print_nfce_cloud_key">nfce</string>
    <string name="pref_print_nfce_resume_cloud_key">nfce_resume</string>
    <string name="pref_print_note_cloud_key">cupom</string>
    <string name="pref_print_nfce_cloud">Imprimir NFC-e</string>
    <string name="pref_print_nfce_resume_cloud">Imprimir NFC-e resumido</string>
    <string name="pref_print_note_cloud">Imprimir Cupom</string>
    <string name="pref_cloud_key">cloud</string>
    <string name="pref_desktop_key">desktop</string>
    <!-- S -->
    <string name="search_item_salesman">Vendedor</string>
    <string name="search_item_client">Cliente</string>
    <string name="sincronizando_dados">Aguarde, sincronizando dados...</string>
    <string name="sobre">Sobre Genius Poynt 2017</string>
    <string name="sobre_email_value">suporte@geniusnt.com</string>
    <string name="sobre_versao">Versão:</string>
    <string name="sobre_serial">Número de Serie:</string>
    <string name="sobre_email">E-mail do Suporte:</string>
    <string name="sobre_site">Site:</string>
    <string name="sobre_politica_privacidade">Política de Privacidade:</string>
    <string name="sobre_fone">Fone:</string>
    <string name="sobre_site_value">http://www.geniusbrasil.com.br</string>
    <string name="sobre_politica_privacidade_value">http://www.geniusbrasil.com.br/politica-de-privacidade-genius-poynt/</string>
    <string name="sobre_fone_value">(71)3503-1999</string>
    <!-- T -->
    <string name="total">0</string>
</resources>
