<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_sync"
        android:title="@string/menu_sync"
        android:icon="@drawable/ic_sync"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_info"
        android:title="@string/menu_info"
        android:icon="@drawable/ic_information_outline"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        android:icon="@drawable/ic_exit_to_app"
        app:showAsAction="ifRoom"/>
</menu>