<?xml version="1.0" encoding="utf-8"?>
 <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/card_margin_default"
        android:stretchColumns="1">

        <TableRow>

            <TextView
                android:id="@+id/data_emissao"
                android:text="12/01/2018 14:56"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/search_item_client"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cliente"
                android:layout_gravity="end"
                android:text="Cliente não informado"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/search_item_salesman"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vendedor"
                android:layout_gravity="end"
                android:text="Vendedor não informado"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/lb_valor_bruto"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valor_bruto"
                android:layout_gravity="end"
                android:text="R$10,00"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/lb_desconto"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desconto"
                android:layout_gravity="end"
                android:text="R$0,00"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:text="@string/lb_valor_liquido"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/valor_liquido"
                android:layout_gravity="end"
                android:text="R$10,00"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/card_margin_min"
            android:layout_marginTop="@dimen/card_margin_min"
            android:background="@android:color/black" />

        <TableRow>

            <TextView
                android:text="@string/lb_itens_venda"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerItensVenda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="@dimen/card_margin_min"
            android:layout_marginTop="@dimen/card_margin_min"
            android:background="@android:color/black" />

        <TableRow>

            <TextView
                android:text="@string/lb_itens_pagamento"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerPagamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TableRow>

            <TextView
                android:text="@string/lb_valor_troco"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/troco"
                android:layout_gravity="end"
                android:text="R$0,00"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

</TableLayout>

