<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnSearchSalesman"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/search_item_salesman"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/btn_selector"/>

                <ImageButton
                    android:id="@+id/btnCancelSalesMan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_selector"
                    android:src="@drawable/ic_clear"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="5dp"
                    android:tint="@color/colorAccent"
                    android:visibility="gone"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btnSearchClient"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/search_item_client"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/btn_selector"/>

                <ImageButton
                    android:id="@+id/btnCancelClient"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_selector"
                    android:src="@drawable/ic_clear"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="5dp"
                    android:tint="@color/colorAccent"
                    android:visibility="gone"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/lbTotalProdutos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:layout_gravity="center|center_vertical"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <TextView
                        android:id="@+id/lbDescricaoProduto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description_produt"
                        android:textSize="12sp"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/lbValorProduto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="R$0,00"
                        android:textSize="12sp"
                        android:textColor="@color/colorAccent"
                        android:textStyle="bold"/>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/btnSearchProd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/btn_selector"
                    android:src="@drawable/ic_search"
                    android:tint="@color/colorAccent" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"/>

    </android.support.v7.widget.CardView>

    <include layout="@layout/include_toolbar_bottom"/>

</LinearLayout>